@startuml

title __SAMLE4's Class Diagram__\n

  package sample {
    package sample.audioOutputs {
      abstract class AudioOutput {
      }
    }
  }
  

  package sample {
    class Controller {
    }
  }
  

  package sample {
    package sample.audioOutputs {
      class Headphones {
      }
    }
  }
  

  package sample {
    package sample.audioOutputs {
      class HiFiSystem {
      }
    }
  }
  

  package sample {
    class Main {
    }
  }
  

  package sample {
    package sample.audioOutputs {
      class Radio {
      }
    }
  }
  

  package sample {
    package sample.audioOutputs {
      class Speakers {
      }
    }
  }
  

  AudioOutput -up-|> Serializable
  Controller o-- HiFiSystem : hiFiSystem
  Headphones -up-|> AudioOutput
  HiFiSystem -up-|> Serializable
  Main -up-|> Application
  Radio -up-|> AudioOutput
  Speakers -up-|> AudioOutput


right footer


PlantUML diagram generated by SketchIt! (https://bitbucket.org/pmesmeur/sketch.it)
For more information about this tool, please contact philippe.mesmeur@gmail.com
endfooter

@enduml
